BS/Übungen/bs20_trumr001/.svn/pristine/3b/3bbf8b2b802e65c3ff4089516e0b9f8778e10f73.svn-base
Bewertungsbogen Blatt 1

Name: Tim Rumrich                      Ihre Punkte -------------.
                                       moegliche Punkte ----.    \
                                                             \    \
                                                              v    v
1.6 (a) mybcp.c
        Dateinamen ueber Kommandozeile                        1 /  1
        byte-weises Kopieren                                  2 /  2
        korrekte Erkennung Dateiende                          2 /  2
        Lese- und Schreibrecht fuer Eigentuemer               1 /  1

1.6 (b) mybappend.c
        byte-weises Anhaengen                                 2 /  2

1.6 (c) myrevbcp.c
        byte-weises Kopieren rueckwaerts                      4 /  4

1.6 (d) mycp.c
        Variable Puffergroesse                                4 /  4
1.7 (c) Rechte wie Originaldatei                              2 /  2
1.7 (d) Check auf regulaere Dateien                           1 /  1

1.7 (a) filelength.c
        Ermittlung und Ausgabe Dateigroesse                   1 /  1

1.7 (b) grow.c
        Erzeugen der Datei falls nicht existert + Rechte      1 /  1
        Setzen der Dateigroesse                               1 /  1

Abzuege bei fehlender Return-Code-Behandlung                 -3 /  1
Abzuege bei Compiler-Warnungen                               -3 /  1
Abzuege Lesbarkeit                                           -3 /  0

Gesamtpunkte:                                 maximal 20 von 22 / 20

Compiler-Warnungen:
mybcp.c:30:3: warning: ignoring return value of ‘write’, declared with attribute warn_unused_result [-Wunused-result]
   write(writeFile, readBuffer, readBytes);
   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc -std=c11 -D_GNU_SOURCE -Og -g -W -Wall -Wno-unused-parameter -Werror=implicit-function-declaration -Wfatal-errors -pthread -o myrevbcp myrevbcp.c
myrevbcp.c: In function ‘main’:
myrevbcp.c:43:3: warning: ignoring return value of ‘write’, declared with attribute warn_unused_result [-Wunused-result]
   write(writeFile, readBuffer, readBytes);
   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc -std=c11 -D_GNU_SOURCE -Og -g -W -Wall -Wno-unused-parameter -Werror=implicit-function-declaration -Wfatal-errors -pthread -o mybappend mybappend.c
mybappend.c: In function ‘main’:
mybappend.c:36:3: warning: ignoring return value of ‘write’, declared with attribute warn_unused_result [-Wunused-result]
   write(writeFile, readBuffer, readBytes);
   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc -std=c11 -D_GNU_SOURCE -Og -g -W -Wall -Wno-unused-parameter -Werror=implicit-function-declaration -Wfatal-errors -pthread -o mycp mycp.c
cc -std=c11 -D_GNU_SOURCE -Og -g -W -Wall -Wno-unused-parameter -Werror=implicit-function-declaration -Wfatal-errors -pthread -o filelength filelength.c
cc -std=c11 -D_GNU_SOURCE -Og -g -W -Wall -Wno-unused-parameter -Werror=implicit-function-declaration -Wfatal-errors -pthread -o grow grow.c
grow.c: In function ‘main’:
grow.c:14:41: error: implicit declaration of function ‘creat’; did you mean ‘crypt’? [-Werror=implicit-function-declaration]
   printf("neues file erstellen... %i\n",creat(argv[1], 0600));
                                         ^~~~~

Fehlerbehandlung:

Coding-Style:

mybappend.c:
Buffergröße war hier noch nicht vorgesehn.
Speicherfehler wenn dieser nicht mitangegeben wird.